# usdImagingSceneIndexExample

./: CMakeLists.txt  LICENSE  package.py
IamHere/: CMakeLists.txt  IamHere.cpp  IamHere.h  IamHerePlugin.cpp  IamHerePlugin.h  plugInfo.json
cmake/: FindPixarUsd.cmake  FindTBB.cmake  FindUsd.cmake
